--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "angular-touch": "^1.4.0"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.0"
+    "angular-mocks": "^1.4.0",
+    "gsap": "^1.19.1",
+    "jquery": "^3.2.1"
   },
   "appPath": "app",
   "moduleName": "yiliApp",
