--- a/bower.json
+++ b/bower.json
@@ -9,12 +9,16 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "angular-material": "~1.1.4",
+    "please-wait": "~0.0.5",
+    "SpinKit": "spinkit#~1.2.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0",
     "gsap": "^1.19.1",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "jquery-classyloader": "*"
   },
   "appPath": "app",
   "moduleName": "yiliApp",
